# cairu-companion

./: ARCHITECTURE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  env.example
config/: prometheus.yml
config/rules/: default_rules.yaml
scripts/: deploy.sh  setup_dev.sh  test_continuous.py  test_interactive.py  test_pipeline.py  test_streaming.py
services/asr/: Dockerfile  requirements.txt
services/asr/src/: __init__.py  main.py  transcriber.py
services/gateway/: Dockerfile  requirements.txt
services/gateway/src/: __init__.py  main.py  routing.py  websocket.py
services/llm/: Dockerfile  requirements.txt
services/llm/src/: __init__.py  main.py  router.py
services/llm/src/backends/: __init__.py  base.py  ollama.py
services/orchestrator/: Dockerfile  requirements.txt
services/orchestrator/src/: __init__.py  main.py  state.py
services/orchestrator/src/prompts/: __init__.py  templates.py
services/orchestrator/src/rules/: __init__.py  engine.py
services/tts/: Dockerfile  requirements.txt
services/tts/src/: __init__.py  main.py  synthesizer.py
services/vad/: Dockerfile  requirements.txt
services/vad/src/: __init__.py  detector.py  main.py
shared/: README.md  pyproject.toml
shared/cairu_common/: __init__.py  config.py  logging.py  metrics.py  models.py  redis_client.py
